Added content in home page

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "install": "cd client && ni && cd ../api && ni"
   },
   "dependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "react-icons": "^4.10.1"
   }
 }
