Add, update and delete users like adding or deleting teachers and students. Add view the feedback given by the users.

--- a/api/.env
+++ b/api/.env
@@ -2,4 +2,6 @@ SERVER_PORT=8000
 DEFAULT_PORT=4000
 ENV=development
 # ENV=production
-MONGOURI=mongodb+srv://admin:admin@evakontech-site.jkfzyse.mongodb.net/evakontech
+MONGOURI=mongodb+srv://abhishekshrestha1025:mern-cluster-001@cluster0.hcaqsim.mongodb.net/LMS
+email=appnotifications77@gmail.com
+password=pooxdruzvwsprdjy
