--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon index.js"
+        "dev": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "",
@@ -15,6 +15,7 @@
         "prettier": "^2.8.8"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
         "mongo-sanitize": "^1.1.0",
         "mongoose": "^7.3.1",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.9.4",
         "nodemon": "^2.0.22"
     }
 }
