--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:8000",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
         "react-icons": "^4.10.1",
         "react-router-dom": "^6.14.1",
         "react-scripts": "5.0.1",
+        "react-toastify": "^9.1.3",
         "tailwindcss": "^3.3.2",
         "web-vitals": "^2.1.4"
     },
