--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
         "mongo-sanitize": "^1.1.0",
         "mongoose": "^7.3.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.4",
         "nodemailer": "^6.9.4",
         "nodemon": "^2.0.22"
     }
