--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@zegocloud/zego-uikit-prebuilt": "^1.8.5",
+        "apexcharts": "^3.42.0",
         "classnames": "^2.3.2",
         "lucide-react": "^0.257.0",
         "react": "^18.2.0",
+        "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.10.1",
         "react-router-dom": "^6.14.1",
