--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "scripts": {
-    "react": "cd client; npm start",
-    "node": "cd api; npm run dev",
-    "dev": "concurrently \"npm run react\" \"npm run node\"",
-    "install": "cd client && ni && cd ../api && ni"
-  },
-  "dependencies": {
-    "concurrently": "^8.2.0",
-    "react-icons": "^4.10.1"
+    "install-server": "npm install --prefix server",
+    "install-client": "npm install --prefix client",
+    "install": "npm run install-server && npm run install-client",
+    "server": "npm run watch --prefix server",
+    "client": "npm start --prefix client",
+    "watch": "npm run server & npm run client"
   }
 }
