--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,12 @@
     "private": true,
     "proxy": "http://localhost:8000",
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@heroicons/react": "^2.0.18",
         "@material-tailwind/react": "^2.1.1",
+        "@mui/material": "^5.14.7",
+        "@mui/styled-engine-sc": "^5.14.7",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -17,9 +21,11 @@
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
         "react-icons": "^4.10.1",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.14.1",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.3",
+        "styled-components": "^5.3.11",
         "tailwindcss": "^3.3.2",
         "uuid": "^9.0.0",
         "web-vitals": "^2.1.4"
