--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.3",
         "styled-components": "^5.3.11",
+        "sweetalert": "^2.1.2",
         "tailwindcss": "^3.3.2",
         "uuid": "^9.0.0",
         "web-vitals": "^2.1.4"
